add sqlc, example handlers
