# db/sqlc/models.go
@@ -1,0 +1,16 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.28.0
+
+package sqlc
+
+import (
+	"time"
+)
+
+type Book struct {
+	ID        int32     `json:"id"`
+	Title     string    `json:"title"`
+	Author    string    `json:"author"`
+	CreatedAt time.Time `json:"created_at"`
+}
